...
                            isNameFocused = true
                            return
                        }
                        viewModel.selectedExercise = searchContext.searchText
                        confirmationImpact.impactOccurred()
                    }
                    .accessibilityIdentifier("addWorkout.exerciseInput")
                    .padding(.top, 8)
                
                List(viewModel.getExerciseSuggestions(name: searchContext.searchText), id: \.self) { exerciseName in
                    Button(action: {
                        viewModel.selectedExercise = exerciseName
                        confirmationImpact.impactOccurred()
...
